// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when click pagination btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-popover-open basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          分页展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1oz57g3"
            >
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 2c.368 0 .667.298.667.667v10.666A.667.667 0 0 1 14 14H2a.667.667 0 0 1-.667-.667V2.667C1.333 2.298 1.632 2 2 2zm-1.333 8.667H3.333V12h9.334z"
                    fill="#8A8F99"
                  />
                </svg>
                分页展示
              </div>
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.667 8H3.333v4.667h9.334zm-10-6h10.666c.368 0 .667.298.667.667v10.666a.667.667 0 0 1-.667.667H2.667A.667.667 0 0 1 2 13.333V2.667C2 2.298 2.298 2 2.667 2"
                    fill="#8A8F99"
                  />
                </svg>
                瀑布流展示
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when click pagination btn 2`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          分页展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1oz57g3"
            >
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 2c.368 0 .667.298.667.667v10.666A.667.667 0 0 1 14 14H2a.667.667 0 0 1-.667-.667V2.667C1.333 2.298 1.632 2 2 2zm-1.333 8.667H3.333V12h9.334z"
                    fill="#8A8F99"
                  />
                </svg>
                分页展示
              </div>
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.667 8H3.333v4.667h9.334zm-10-6h10.666c.368 0 .667.298.667.667v10.666a.667.667 0 0 1-.667.667H2.667A.667.667 0 0 1 2 13.333V2.667C2 2.298 2.298 2 2.667 2"
                    fill="#8A8F99"
                  />
                </svg>
                瀑布流展示
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when click scroll btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-popover-open basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          瀑布流展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1oz57g3"
            >
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 2c.368 0 .667.298.667.667v10.666A.667.667 0 0 1 14 14H2a.667.667 0 0 1-.667-.667V2.667C1.333 2.298 1.632 2 2 2zm-1.333 8.667H3.333V12h9.334z"
                    fill="#8A8F99"
                  />
                </svg>
                分页展示
              </div>
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.667 8H3.333v4.667h9.334zm-10-6h10.666c.368 0 .667.298.667.667v10.666a.667.667 0 0 1-.667.667H2.667A.667.667 0 0 1 2 13.333V2.667C2 2.298 2.298 2 2.667 2"
                    fill="#8A8F99"
                  />
                </svg>
                瀑布流展示
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when click scroll btn 2`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          瀑布流展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1oz57g3"
            >
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 2c.368 0 .667.298.667.667v10.666A.667.667 0 0 1 14 14H2a.667.667 0 0 1-.667-.667V2.667C1.333 2.298 1.632 2 2 2zm-1.333 8.667H3.333V12h9.334z"
                    fill="#8A8F99"
                  />
                </svg>
                分页展示
              </div>
              <div
                class="download-record-item"
              >
                <svg
                  class="download-record-item-icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.667 8H3.333v4.667h9.334zm-10-6h10.666c.368 0 .667.298.667.667v10.666a.667.667 0 0 1-.667.667H2.667A.667.667 0 0 1 2 13.333V2.667C2 2.298 2.298 2 2.667 2"
                    fill="#8A8F99"
                  />
                </svg>
                瀑布流展示
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when show pagination btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          分页展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/Detail/Common/ListLayoutSelector render snap when show scroll btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.25 1.75c.322 0 .583.261.583.583v9.334a.583.583 0 0 1-.583.583H1.75a.583.583 0 0 1-.583-.583V2.333c0-.322.26-.583.583-.583zm-.583 1.167H2.333v8.166h9.334zM10.5 8.75v1.167h-7V8.75z"
                fill="#292C33"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 5px;"
        >
          瀑布流展示
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              color="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</body>
`;
